fixed broken assignment link
plus UI changes

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -53,8 +53,8 @@
     <script src="views/user/controllers/public-profile.controller.client.js"></script>
     <script src="views/user/controllers/guest.controller.client.js"></script>
     <script src="views/admin/controllers/admin.controller.client.js"></script>
-    <script src="services_client/user.service.client.js"></script>
-    <script src="services_client/music.service.client.js"></script>
+    <script src="services/user.service.client.js"></script>
+    <script src="services/music.service.client.js"></script>
 
     <link href="css/styles.css" rel="stylesheet"/>
 
