--- a/public/test/index.html
+++ b/public/test/index.html
@@ -6,6 +6,11 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="app.js"></script>
+    <style>
+        .ng-submitted .ng-invalid {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <div class="container" ng-controller="TestController as model">
